turtleart.lessons.turtleart.Main.HouseMany.scala.error
Source:2: error: Missing closing brace `}' assumed here
override def run() {	
^Source:2: error: expected start of definition
override def run() {	
         ^Source:60: error: expected class or object definition
avance(75)
^Source:62: error: expected class or object definition
for (j<-1 to 4) {
^